--- a/test_vector_extraction.ipynb
+++ b/test_vector_extraction.ipynb
@@ -23,6 +23,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from data_casual import instruction_data_point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "from llama.model import ModelArgs, Transformer\n",
     "from llama.tokenizer import ChatFormat, Dialog, Message, Tokenizer"
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> initializing model parallel with size 1\n",
+      "> initializing model parallel with size 1"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "> initializing ddp with size 1\n",
       "> initializing pipeline with size 1\n"
      ]
@@ -78,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded in 231.73 seconds\n"
+      "Loaded in 116.72 seconds\n"
      ]
     }
    ],
@@ -88,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +168,7 @@
        "205734"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,14 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 188, 4096])\n",
+      "tensor([[[-0.0664,  0.1074, -0.0164,  ...,  0.3164,  0.3828,  0.1367],\n",
+      "         [ 0.7188,  0.0303,  0.1816,  ..., -0.1377,  0.0913, -0.1455],\n",
+      "         [ 0.3711,  0.4609,  0.2871,  ...,  0.2412,  0.6094, -0.5234],\n",
+      "         ...,\n",
+      "         [ 0.0449,  0.3086,  0.0752,  ...,  0.1602,  0.4258,  0.4023],\n",
+      "         [-0.6719,  0.5000,  0.2090,  ..., -0.0571,  0.0986, -0.1875],\n",
+      "         [-0.5078,  0.5781,  0.1973,  ..., -0.2012, -0.1934,  0.1367]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[ 0.2012,  0.8516, -0.1660,  ...,  0.2002,  0.1211, -0.4570]]])\n"
+     ]
+    }
+   ],
    "source": [
     "neg_activation_vector_dic = {}\n",
     "pos_activation_vector_dic = {}\n",
     "loss = 0\n",
-    "for i in range(n//50):\n",
+    "for i in range(1):\n",
     "    value, activation_vec_list = generator.chat_completion([input_list_train[i]],\n",
     "                                       max_gen_len=max_gen_len,\n",
     "                                       top_p=top_p,\n",
@@ -182,6 +215,113 @@
     "    else :\n",
     "        neg_activation_vector_dic[i] = activation_vec_list[0]\n",
     "        loss += 1/len(input_list_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 58, 4096])\n",
+      "tensor([[[-0.0664,  0.1108, -0.0151,  ...,  0.3164,  0.3770,  0.1367],\n",
+      "         [ 0.7227,  0.0322,  0.1895,  ..., -0.1309,  0.0898, -0.1416],\n",
+      "         [ 0.3770,  0.4551,  0.2871,  ...,  0.2393,  0.6016, -0.5234],\n",
+      "         ...,\n",
+      "         [-0.0483,  0.4551, -0.1113,  ..., -0.0182, -0.1689,  0.2617],\n",
+      "         [-0.4375,  0.2256,  0.0522,  ...,  0.0874,  0.0156, -0.1250],\n",
+      "         [-0.3164,  0.1138,  0.5859,  ...,  0.0186, -0.1836, -0.2109]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[ 0.1426, -0.1338,  0.1758,  ...,  0.0571,  0.2949, -0.1543]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.4180, -0.7070,  0.5977,  ...,  0.1748, -0.3496, -0.4219]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.4258,  0.0898, -0.1797,  ..., -0.9492, -0.5117,  0.0664]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.2559,  0.0186, -0.0947,  ..., -0.1338, -0.4355,  0.3066]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.4297, -0.0742,  0.1787,  ..., -0.3340, -0.4043,  0.5742]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.3652, -0.2910,  0.2695,  ..., -0.2891, -0.2734,  0.7578]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.6055, -0.1748,  0.3633,  ..., -0.5391, -0.0137,  0.1807]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.7031,  0.3164, -0.0186,  ..., -0.4023, -0.2168, -0.2139]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.3594, -0.6875,  0.2031,  ..., -0.2773, -0.7578,  0.5312]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.4609, -0.0171, -0.2734,  ..., -0.5469, -0.5938,  0.1240]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.2617,  0.0962,  0.3047,  ..., -0.7773, -0.6602, -0.1797]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.3828,  1.2578,  0.3594,  ..., -0.5625,  0.2129,  0.0674]]])\n",
+      "torch.Size([1, 1, 4096])\n",
+      "tensor([[[-0.0654,  0.8242,  0.1318,  ...,  0.3477, -0.2500, -0.0820]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "value_instruct, activation_instruct = generator.chat_completion(instruction_data_point,\n",
+    "                                       max_gen_len=max_gen_len,\n",
+    "                                       top_p=top_p,\n",
+    "                                       temperature=temperature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'generation': {'role': 'assistant',\n",
+       "   'content': \"I'm ready to provide a response. What is the statement?\"}}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value_instruct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([-0.2812,  0.1436,  0.1602,  ..., -0.1445,  0.0107,  0.0918]),\n",
+       " tensor([ 0.1426, -0.1338,  0.1758,  ...,  0.0571,  0.2949, -0.1543]),\n",
+       " tensor([-0.4180, -0.7070,  0.5977,  ...,  0.1748, -0.3496, -0.4219]),\n",
+       " tensor([-0.4258,  0.0898, -0.1797,  ..., -0.9492, -0.5117,  0.0664]),\n",
+       " tensor([-0.2559,  0.0186, -0.0947,  ..., -0.1338, -0.4355,  0.3066]),\n",
+       " tensor([-0.4297, -0.0742,  0.1787,  ..., -0.3340, -0.4043,  0.5742]),\n",
+       " tensor([-0.3652, -0.2910,  0.2695,  ..., -0.2891, -0.2734,  0.7578]),\n",
+       " tensor([-0.6055, -0.1748,  0.3633,  ..., -0.5391, -0.0137,  0.1807]),\n",
+       " tensor([-0.7031,  0.3164, -0.0186,  ..., -0.4023, -0.2168, -0.2139]),\n",
+       " tensor([-0.3594, -0.6875,  0.2031,  ..., -0.2773, -0.7578,  0.5312]),\n",
+       " tensor([-0.4609, -0.0171, -0.2734,  ..., -0.5469, -0.5938,  0.1240]),\n",
+       " tensor([-0.2617,  0.0962,  0.3047,  ..., -0.7773, -0.6602, -0.1797]),\n",
+       " tensor([-0.3828,  1.2578,  0.3594,  ..., -0.5625,  0.2129,  0.0674]),\n",
+       " tensor([-0.0654,  0.8242,  0.1318,  ...,  0.3477, -0.2500, -0.0820])]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "activation_instruct"
    ]
   },
   {
