Evaluating after removing instruct vector

--- a/test_loading_vec.ipynb
+++ b/test_loading_vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,8 @@
     "from pathlib import Path\n",
     "from typing import List, Optional, Tuple, TypedDict\n",
     "\n",
+    "from eval import calc_loss_steering_vector, extracting_steering_vector\n",
+    "\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
     "from fairscale.nn.model_parallel.initialize import (\n",
@@ -35,37 +37,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ribbe\\AppData\\Local\\Temp\\ipykernel_101960\\270507088.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  steering_vec = torch.load(\"./steering_without_instruct/n_vector26.pt\")\n"
+     ]
+    }
+   ],
    "source": [
-    "steering_vec = torch.load(\"./steering_vector.pt\")\n",
-    "steering_vec_2 = torch.load(\"./steering_vector_1.pt\")\n",
-    "steering_vec_3 = torch.load(\"./steering_vector_2.pt\")\n",
-    "steering_vec_layer_28 = torch.load(\"./steering_vector_layer28.pt\")\n"
+    "steering_vec = torch.load(\"./steering_without_instruct/n_vector26.pt\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> initializing model parallel with size 1\n",
+      "> initializing ddp with size 1\n",
+      "> initializing pipeline with size 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Ribbe\\Coding\\VSC\\FU_Berlin\\Actual_Work\\llama3\\llama\\generation.py:98: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  checkpoint = torch.load(ckpt_path, map_location=\"cpu\")\n",
+      "c:\\Users\\Ribbe\\Coding\\VSC\\Coding_venv\\Lib\\site-packages\\torch\\__init__.py:1144: UserWarning: torch.set_default_tensor_type() is deprecated as of PyTorch 2.1, please use torch.set_default_dtype() and torch.set_default_device() as alternatives. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\tensor\\python_tensor.cpp:434.)\n",
+      "  _C._set_default_tensor_type(t)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded in 128.39 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "steering_vec_layer_28"
+    "generator = Llama.build(\"./\", \"./tokenizer.model\",max_seq_len= 1024,max_batch_size= 4, activation=True, activation_layer=26,steering_vector=steering_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "generator = Llama.build(\"./\", \"./tokenizer.model\",max_seq_len= 1024,max_batch_size= 4, activation=True, activation_layer=28,steering_vector=steering_vec_layer_28)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,27 +106,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer 26 loss with multiplier 15 is 0.2108433734939747\n"
+     ]
+    }
+   ],
    "source": [
-    "generator.model.adding_activation_vector = 1.2*steering_vec_layer_28"
+    "loss = calc_loss_steering_vector(generator, steering_vec, (input_list_test, output_list_test), layer=26, iter=len(input_list_test), multiplier=14)\n",
+    "print(f\"Layer {26} loss with multiplier {15} is {loss}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generator.model.adding_activation_vector"
+    "generator.change_activation_vector(14.5*steering_vec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "generator.change_activation_layer(26)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'generation': {'role': 'assistant', 'content': 'F'}}] [None, None]\n"
+     ]
+    }
+   ],
    "source": [
     "value, activations = generator.chat_completion([input_list_test[1142]],\n",
     "                                   max_gen_len=max_gen_len,\n",
@@ -109,131 +161,35 @@
     "print(value, activations)\n",
     "\n",
     "n = len(input_list_test)\n",
-    "loss = 0\n",
+    "values = []\n",
     "for i in range(n):\n",
     "    value, activations = generator.chat_completion([input_list_test[i]],\n",
     "                                      max_gen_len=max_gen_len,\n",
     "                                       top_p=top_p,\n",
     "                                       temperature=temperature)\n",
     "    value2 = 1 if value[0][\"generation\"][\"content\"]==\"T\" else 0\n",
-    "    loss += 1/n*abs(int(output_list_test[i])-int(value2))\n",
-    "\n",
-    "print(loss)"
+    "    values.append(value2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "982"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "output_list_test.count(\"0\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -259,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
